<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>romea_ublox_driver</name>
  <version>0.0.0</version>
  <description>Simple driver for ublox gps</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>romea_core_common</depend>
  <depend>romea_core_gps</depend>
  <depend>romea_common_utils</depend>
  <depend>romea_gps_utils</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nmea_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>